# asm-test

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  .mailmap  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Dockerfile.attachprof-probe  Dockerfile.bindings  Dockerfile.bindings-asm-base  Dockerfile.bindings-base  Dockerfile.cli  Dockerfile.dataflow-attach  Dockerfile.desktop  Dockerfile.drext-probe  Dockerfile.drtrace  Dockerfile.drtrace-lang  Dockerfile.fuzz  Dockerfile.gccanon-attach  Dockerfile.gcfence-probe  Dockerfile.gcprofiler-probe  Dockerfile.hwtrace  Dockerfile.hwtrace-codeimage  Dockerfile.hwtrace-dotnet-amd  Dockerfile.manylinux-wheel  Dockerfile.pintool  Dockerfile.sde  Dockerfile.sshpass  Dockerfile.suspendprof-probe  Dockerfile.syspkg-aur  Dockerfile.syspkg-brew  Dockerfile.syspkg-conan  Dockerfile.syspkg-deb  Dockerfile.syspkg-vcpkg  (+15 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
bindings/: Dockerfile.lang  dataflow_victim.c
bindings/cpp/: CMakeLists.txt  Dockerfile  README.md  asmtest.hpp  asmtest_dataflow.hpp  asmtest_drtrace.hpp  asmtest_hwtrace.hpp  test_cpp.cpp  test_dataflow.cpp  test_drtrace.cpp  test_hwtrace.cpp
bindings/python/: Dockerfile  README.md  pyproject.toml  setup.py
bindings/python/asmtest/: __init__.py  __main__.py  _native.py  assertions.py  core.py  dataflow.py  drtrace.py  hwtrace.py
bindings/python/tests/: conftest.py  test_asm.py  test_assertions.py  test_capture_wide.py  test_conformance.py  test_dataflow.py  test_drgate.py  test_drtrace.py  test_fuzz.py  test_guards.py  test_hwtrace.py  test_smoke.py  test_vec256.py  test_vec512.py
bindings/rust/: Cargo.toml  Dockerfile  README.md  build.rs  test_dataflow.rs
bindings/rust/examples/: drtrace.rs
bindings/rust/src/: drtrace.rs  hwtrace.rs  lib.rs
bindings/rust/tests/: asm_no_env.rs  assertions.rs  conformance.rs  drtrace.rs  hwtrace.rs
bpf/: branchsnap.bpf.c  branchsnap_event.h  codeimage.bpf.c  codeimage_event.h  vmlinux_min.h
ci/: asmtest.gitlab-ci.yml
cli/: argdecode_victim.c  asmspy.c  asmspy.h  asmspy_arch.h  asmspy_autoregion.h  asmspy_dataview.h  asmspy_engine.c  asmspy_ghash.h  asmspy_graphsort.h  asmspy_logview.h  asmspy_proc.c  asmspy_treefilter.h  asmtrace_ndjson.c  asmtrace_ndjson.h  auto_victim.c  cli_smoke.sh  clone_victim.c  cpp_victim.cpp  debuglink_victim.c  exec_stage2.c  exec_victim.c  exit_victim.c  fork_victim.c  gen-syscall-names.sh  i386_victim.c  int3_victim.c  jit_victim.c  jitdump_victim.c  libasmspy.h  longjmp_victim.c  sample_victim.c  sigcall_victim.c  sock_victim.c  spy_victim.c  test_arch.c  test_asmtrace.c  test_autoregion.c  test_ghash.c  test_graphsort.c  test_jitdump.c  (+8 more)
desktop/: README.md
docs/: abi-capture.md  amd_tracing_review.md  api-reference.md  assertions.md  bindings.md  changelog.md  ci.md  clean-room-testing.md  conf.py  design.md  diagrams.md  disassembly.md  emulator.md  examples.md  features.md  floating-point-simd.md  glossary.md  hardware-tracing.md  index.md  installation.md  integration.md  native-tracing.md  packaging.md  portability.md  property-testing.md  puppeteer-config.json  quickstart.md  releasing.md  requirements.txt  runner.md  scoped-tracing-implementation.md  traces.md  win64.md  writing-tests.md
drclient/: CMakeLists.txt  attach_probe.c  probe_extensions.c
examples/: add.asm  add.s  apx_basic.s  args.asm  args.s  attach_demo.sh  attach_probe_victim.c  attach_trace.c  attach_victim.c  bench.asm  bench.s  bittricks.asm  bittricks.s  blockstep_value_spike.c  branch.asm  branch.s  callback.asm  callback.s  checked.asm  checked.s  ct_eq.s  dr_taint.c  dr_taint_simd.c  dr_valtrace.c  dr_valtrace_bench.c  emucases.s  fault.s  flags.asm  flags.s  fp.asm  fp.s  fpover.asm  fpover.s  fuzz_afl.c  fuzz_afl_map.c  fuzz_libfuzzer.c  ibs_probe.c  jit_trace.c  jit_trace_node.c  jvmti_bci_agent.c  (+89 more)
include/: asm.h  asm_nasm.inc  asmtest.h  asmtest_addr_channel.h  asmtest_assemble.h  asmtest_blockstep_internal.h  asmtest_codeimage.h  asmtest_descent_internal.h  asmtest_drtrace.h  asmtest_emu.h  asmtest_hwtrace.h  asmtest_ibs.h  asmtest_mach.h  asmtest_ptrace.h  asmtest_rec.h  asmtest_taint.h  asmtest_taint_gcmove.h  asmtest_taint_oracle_shm.h  asmtest_taint_shm.h  asmtest_trace.h  asmtest_trace_auto.h  asmtest_valtrace.h  asmtest_valtrace_shm.h
licenses/: README.md
mk/: bench.mk  bindings.mk  cli.mk  dataflow.mk  desktop.mk  docker.mk  docs.mk  fuzz.mk  native-trace.mk  pintool.mk  sde.mk  win64.mk
pintool/: asmtest_pintool.cpp  makefile  makefile.rules  pin_apx_fixture.h  pintool_shm.h  probe_capture.cpp
scripts/: amalgamate.sh  assert-clean-path.sh  bench-compare  bench-golden-check.py  bench-report.sh  bindings-parity-allow.txt  build-capstone.sh  build-dynamorio-macos.sh  build-keystone.sh  build-manylinux-wheel.sh  check-bindings-parity.sh  check-thirdparty-versions.sh  clean-env.sh  clean-room-test.sh  codesign-debugger.sh  collect-licenses.sh  docker-osx-bindings.sh  dr_valtrace_bench.sh  fetch-corresponding-source.sh  fetch-dynamorio.sh  fetch-imgui.sh  fetch-json.sh  fetch-libdft.sh  fetch-pin.sh  fetch-sde.sh  gen-bindings.py  gen-manifest.c  install-deps.sh  lib-thirdparty.sh  macos-clean-test.sh  osx-vm.sh  package-native.sh  refresh-thirdparty-digests.sh  runner-jit-loop.sh  sync-version.sh  test-asmtrace-export.sh  third-party-digests.txt  thirdparty-cache.sh  verify-macho.sh
src/: amd_backend.c  amd_backend.h  asmtest.c  asmtest_grow.h  asmtrace_rec.c  assemble.c  branchsnap.c  bs_recon.c  bs_recon.h  capture.asm  capture.s  capture_win64.asm  codeimage.c  cs_backend.c  dataflow.c  dataflow_blockstep.c  dataflow_dr.c  dataflow_dr.h  dataflow_dr_client.c  dataflow_dr_client_inlined.c  dataflow_emu.c  dataflow_gcmove.c  dataflow_helpers.c  dataflow_method.c  dataflow_objid.c  dataflow_operands.c  dataflow_pt.c  dataflow_ptrace.c  debug.c  debug.h  descent.c  disasm.c  drtrace_app.c  drtrace_client.c  emu.c  ffi.c  fuzz.c  glob_match.c  glob_match.h  hwtrace.c  (+18 more)
tests/: expect.sh  glob_parity.c  grow_overflow.c  (+2 more)
(+850 files in other folders)
