[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "asmtest"
version = "1.0.0"
description = "Python binding for the asm-test assembly unit-testing framework"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["assembly", "testing", "abi", "emulator", "unicorn", "ctypes"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
]

# Pure-ctypes at runtime — no build-time native dependency. A published wheel
# would bundle the prebuilt libasmtest[_emu] shared libs per platform tag (via
# cibuildwheel); for now the package locates them next to the repo's build/ dir
# or via ASMTEST_LIB / ASMTEST_MANIFEST.
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/wilvk/asm-test"

[tool.setuptools]
packages = ["asmtest"]
