[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "asmtest"
version = "1.0.0"
description = "Python binding for the asm-test assembly unit-testing framework"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["assembly", "testing", "abi", "emulator", "unicorn", "ctypes"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
]

# Pure-ctypes at runtime — no build-time native dependency. `make python-package`
# stages the prebuilt libasmtest[_emu] + asmtest_abi.json into asmtest/_libs/ so
# the wheel is self-contained (the loader prefers the bundled libs); a real
# multi-platform release builds one wheel per platform tag via cibuildwheel.
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/wilvk/asm-test"

[tool.setuptools]
packages = ["asmtest"]

# Bundle the native libraries + layout manifest staged into asmtest/_libs/.
[tool.setuptools.package-data]
asmtest = ["_libs/*.so", "_libs/*.so.*", "_libs/*.dylib", "_libs/*.json"]
