[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "asmtest"
version = "1.1.0"
description = "Python binding for the asm-test assembly unit-testing framework"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["assembly", "testing", "abi", "emulator", "unicorn", "ctypes"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
    # asm-test is MIT, but the bundled native payload conveys Unicorn + Keystone
    # (GPL-2.0) and Capstone (BSD-3-Clause), so the wheel as distributed is
    # effectively GPL-2.0. See asmtest/_libs/THIRD-PARTY-LICENSES/.
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "License :: OSI Approved :: BSD License",
]

# Pure-ctypes at runtime — no build-time native dependency. `make python-package`
# stages the prebuilt libasmtest[_emu] + asmtest_abi.json into asmtest/_libs/ so
# the wheel is self-contained (the loader prefers the bundled libs). setup.py
# tags it py3-none-<platform> (platlib); the release workflow then repairs it per
# platform — auditwheel -> manylinux (Linux), delocate (macOS) — vendoring
# libunicorn so the published wheel needs no system libs.
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/wilvk/asm-test"

[tool.setuptools]
packages = ["asmtest"]

# Bundle the native libraries + layout manifest + third-party license notices
# staged into asmtest/_libs/ (auditwheel/delocate vendor the deps at repair time).
[tool.setuptools.package-data]
asmtest = [
    "_libs/*.so", "_libs/*.so.*", "_libs/*.dylib", "_libs/*.json",
    "_libs/THIRD-PARTY-LICENSES/*", "_libs/THIRD-PARTY-LICENSES/**/*",
]
